# MachineVision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/bead/: CMakeLists.txt
core/bead/include/: bead.hpp  beadDirection.hpp  beadMeasuring.hpp  beadModel.hpp  fitSpline.hpp  pickContour.hpp  posBead.hpp
core/bead/src/: bead.cpp  beadMeasuring.cpp  beadModel.cpp  fitSpline.cpp  pickContour.cpp  posBead.cpp  trackBead.cpp
core/m1d/deprecate/: fuzzyFunc.cpp  mcout.hpp  measureHandle.cpp  mutils.cpp  mutils.hpp
core/m1d/include/: fuzzyMeasuring.hpp  measureHandle.hpp  measuring.hpp
core/m1d/src/: measureRectangle.cpp  measuring.cpp  mutils.cpp
core/m1d/src/fuzzy/: fuzzyMeasuring.cpp  fuzzyMeasuringPairs.cpp
core/measuring1d/: CMakeLists.txt
core/measuring1d/include/: MCout.hpp  MUtils.hpp  Measuring.hpp  MeasuringCore.hpp  MeasuringResults.hpp  fuzzyMeasuring.hpp  mcout.hpp  measureHandle.hpp  mutils.hpp
core/measuring1d/include/edge_elements/: ArcElement.hpp  ArcTransposedElement.hpp  EdgeElement.hpp  RectElement.hpp
core/measuring1d/include/fuzzy/: FuzzyMeasuring.hpp  FuzzyStructs.hpp
core/measuring1d/src/: MCout.cpp  MUtils.cpp  Measuring.cpp  MeasuringResults.cpp  mcout.cpp  measureArc.cpp  measureResults.cpp  measuring.cpp
core/measuring1d/src/edge_elements/: ArcElement.cpp  ArcTransposedElement.cpp  EdgeElement.cpp  RectElement.cpp
core/measuring1d/src/fuzzy/: FuzzyMeasuring.cpp  FuzzyStructs.cpp  fuzzyFunc.cpp  fuzzyMeasuringPairs.cpp
core/measuring2d/: CMakeLists.txt
core/measuring2d/include/: inRegion.hpp  metcout.hpp  metrologyObject.hpp  ransacError.hpp  ransacFit.hpp
core/measuring2d/src/: applyMetrologyModel.cpp  inRegion.cpp  metcout.cpp
core/measuring2d/src/objects/: arcObject.cpp  arcProjectionObject.cpp  ellipseObject.cpp  lineObject.cpp  metrologyObject.cpp  rectObject.cpp
core/measuring2d/src/ransac/: ransacError.cpp  ransacFit.cpp
core/meniscus/: CMakeLists.txt
core/meniscus/include/: meniscus.hpp
core/meniscus/src/: meniscus.cpp
core/utils/: CMakeLists.txt
core/utils/include/: arrutils.hpp  mathutils.hpp
core/utils/src/: arrutils.cpp  mathutils.cpp
generators/: CMakeLists.txt
generators/include/: generatorAnchors.hpp  generatorParams.hpp  metrologyGen.hpp
generators/src/: arcGen.cpp  ellipseGen.cpp  lineGen.cpp  metrologyGen.cpp  rectGen.cpp
tests/: CMakeLists.txt
tests/bead/: beadTest.cpp
tests/measuring/: fuzzyMeasuring_test.cpp  measuring_test.cpp
tests/measuring/rect/: rectTestFuzzyPos.cpp
tests/meniscus/: meniscus_testing.cpp
tests/metrology/: metrology_testarcs.cpp  metrology_testellipse.cpp  metrology_testfull.cpp  metrology_testgenerators.cpp  metrology_testlines.cpp  metrology_testrects.cpp
uml-diagrams/: measuring_classes.class.violet.html  metrology_object.class.violet.html  result_structs.class.violet.html
